# easy_as

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md  TORCH_INTEGRATION.md
eas/: __init__.py  analysis.py  autotune.py  compiler.py  dlpack.py  ir.py  kernel.py  meta.py  mk.py  tensor.py  torch.py
eas/codegen/: __init__.py  msl.py
eas/runtime/: __init__.py  _metal.mm  base.py  cpu.py  grid.py  metal.py  metal_ext.py
examples/: __init__.py  add.py  matmul.py  matmul_simdgroup.py  matmul_tiled.py
tests/: test_add.py  test_autotune.py  test_bool_simplify.py  test_callable_grid.py  test_dlpack.py  test_dot_codegen_unique_vars.py  test_dot_dynamic_k.py  test_dot_f16_codegen.py  test_f16_codegen.py  test_fma.py  test_grid_infer.py  test_interval_lt_fold.py  test_kernel_cache.py  test_local_and_lane_id.py  test_matmul.py  test_matmul_tiled.py  test_metal_copy.py  test_metal_numpy_bridge.py  test_mma_codegen.py  test_specialize_scalars.py  test_spmd_codegen.py  test_tensor.py  test_tensor_f16.py  test_thread_id_rewrite.py  test_threadgroup_memory.py  test_torch_interop.py  test_tptg_override.py
tools/: build_metal_ext.py
